plugins {
    id 'com.android.application'
}

android {
    namespace 'com.adam.downloadhub'
    compileSdk 35

    defaultConfig {
        applicationId 'com.adam.downloadhub'
        minSdk 29
        targetSdk 35
        versionCode 22
        versionName '2.0.2'
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}
